# celery-tool

./: README.md  pyproject.toml  requirements.txt
src/celery-tool/: chunkify.py
